--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Intervid</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <!-- <meta property="og:url" content="http://intervid-app.herokuapp.com" /> -->
+
+  <!-- SEO -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="For busy business owners, HR recruiters and managers who want to speed-up their recruiting process, INTERVID is the must-have app that saves time and simplifies the hiring process. With our easy-to-use platform, recruiters can easily create and share a job interview to candidates, making it easier to evaluate and manage their recorded qualifications from anywhere, at any time.">
+
+  <!-- Open Graph tags for Facebook -->
+  <meta property="og:title" content="Create and share a job interview to candidates. | Intervid">
+  <meta property="og:type" content="website">
+  <meta property="og:description" content="Create and share a job interview to candidates.">
+  <meta property="og:image" content="/favicon/favicon.png">
+  <meta property="og:url" content="https://www.inter-vid.com/">
+  <meta property="og:site_name" content="Intervid">
+
+  <!-- Twitter Card tags for Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Create and share a job interview to candidates. | Intervid.">
+  <meta name="twitter:description" content="Create and share a job interview to candidates.">
+  <meta name="twitter:image" content="/favicon/favicon.png">
+
+  <!-- WhatsApp tags -->
+  <meta property="og:title" content="Create and share a job interview to candidates. | Intervid.">
+  <meta property="og:description" content="Create and share a job interview to candidates.">
+  <meta property="og:image" content="/favicon/favicon.png">
+  <meta property="og:url" content="https://www.inter-vid.com/">
+  <meta property="og:type" content="website">
+
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon.png" />
+  <title>Intervid</title>
+</head>
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
+</body>
 </html>
