--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <!-- Google Tag Manager - used for google analytics -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-W3BMFVT');</script>
+  <!-- End Google Tag Manager -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
@@ -37,8 +48,14 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon.png" />
   <title>Intervid</title>
 </head>
+
 <body>
+  <!-- Google Tag Manager (noscript) - used for google analytics -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W3BMFVT" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
+
 </html>
