action modal and helpers in sass

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <meta property="og:url" content="https://www.inter-vid.com/">
   <meta property="og:type" content="website">
 
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+  <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico" /> -->
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon.png" />
   <title>Intervid</title>
 </head>
