--- a/index.html
+++ b/index.html
@@ -1,74 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Google Tag Manager - used for google analytics -->
-    <script>
-      ;(function (w, d, s, l, i) {
-        w[l] = w[l] || []
-        w[l].push({
-          'gtm.start': new Date().getTime(),
-          event: 'gtm.js',
-        })
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != 'dataLayer' ? '&l=' + l : ''
-        j.async = true
-        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
-        f.parentNode.insertBefore(j, f)
-      })(window, document, 'script', 'dataLayer', 'GTM-W3BMFVT')
-    </script>
-    <!-- End Google Tag Manager -->
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <!-- <meta property="og:url" content="http://intervid-app.herokuapp.com" /> -->
+<head>
+  <!-- Google Tag Manager - used for google analytics -->
+  <script>
+    ; (function (w, d, s, l, i) {
+      w[l] = w[l] || []
+      w[l].push({
+        'gtm.start': new Date().getTime(),
+        event: 'gtm.js',
+      })
+      var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s),
+        dl = l != 'dataLayer' ? '&l=' + l : ''
+      j.async = true
+      j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
+      f.parentNode.insertBefore(j, f)
+    })(window, document, 'script', 'dataLayer', 'GTM-W3BMFVT')
+  </script>
+  <!-- End Google Tag Manager -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <!-- <meta property="og:url" content="http://intervid-app.herokuapp.com" /> -->
 
-    <!-- SEO -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="For busy business owners, HR recruiters and managers who want to speed-up their recruiting process, INTERVID is the must-have app that saves time and simplifies the hiring process. With our easy-to-use platform, recruiters can easily create and share a job interview to candidates, making it easier to evaluate and manage their recorded qualifications from anywhere, at any time."
-    />
+  <!-- SEO -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="For busy business owners, HR recruiters and managers who want to speed-up their recruiting process, INTERVID is the must-have app that saves time and simplifies the hiring process. With our easy-to-use platform, recruiters can easily create and share a job interview to candidates, making it easier to evaluate and manage their recorded qualifications from anywhere, at any time." />
 
-    <!-- Open Graph tags for Facebook -->
-    <meta property="og:title" content="Create and share a job interview to candidates. | Intervid" />
-    <meta property="og:type" content="website" />
-    <meta property="og:description" content="Create and share a job interview to candidates." />
-    <meta property="og:image" content="/favicon/favicon.png" />
-    <meta property="og:url" content="https://www.inter-vid.com/" />
-    <meta property="og:site_name" content="Intervid" />
+  <!-- Open Graph tags for Facebook -->
+  <meta property="og:title" content="Create and share a job interview to candidates. | Intervid" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="Create and share a job interview to candidates." />
+  <meta property="og:image" content="/favicon/favicon.png" />
+  <meta property="og:url" content="https://www.inter-vid.com/" />
+  <meta property="og:site_name" content="Intervid" />
 
-    <!-- Twitter Card tags for Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Create and share a job interview to candidates. | Intervid." />
-    <meta name="twitter:description" content="Create and share a job interview to candidates." />
-    <meta name="twitter:image" content="/favicon/favicon.png" />
+  <!-- Twitter Card tags for Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Create and share a job interview to candidates. | Intervid." />
+  <meta name="twitter:description" content="Create and share a job interview to candidates." />
+  <meta name="twitter:image" content="/favicon/favicon.png" />
 
-    <!-- WhatsApp tags -->
-    <meta property="og:title" content="Create and share a job interview to candidates. | Intervid." />
-    <meta property="og:description" content="Create and share a job interview to candidates." />
-    <meta property="og:image" content="/favicon/favicon.png" />
-    <meta property="og:url" content="https://www.inter-vid.com/" />
-    <meta property="og:type" content="website" />
+  <!-- WhatsApp tags -->
+  <meta property="og:title" content="Create and share a job interview to candidates. | Intervid." />
+  <meta property="og:description" content="Create and share a job interview to candidates." />
+  <meta property="og:image" content="/favicon/favicon.png" />
+  <meta property="og:url" content="https://www.inter-vid.com/" />
+  <meta property="og:type" content="website" />
 
-    <link rel="icon" href="/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon.png" />
-    <title>Intervid</title>
-  </head>
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon.png" />
 
-  <body>
-    <!-- Google Tag Manager (noscript) - used for google analytics -->
-    <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-W3BMFVT"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe
-    ></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+  <!-- material icons -->
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
+  <title>Intervid</title>
+</head>
+
+<body>
+  <!-- Google Tag Manager (noscript) - used for google analytics -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W3BMFVT" height="0" width="0"
+      style="display: none; visibility: hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
+</body>
 </html>
