added mask icon to show favicon in safari browser

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <!-- <meta property="og:url" content="http://intervid-app.herokuapp.com" /> -->
+    <meta property="og:url" content="http://intervid-app.herokuapp.com" />
 
     <!-- SEO -->
     <meta charset="utf-8" />
@@ -52,8 +52,9 @@
     <meta property="og:url" content="https://www.inter-vid.com/" />
     <meta property="og:type" content="website" />
 
-    <link rel="icon" href="/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon/favicon.ico" />
+    <link rel="icon" type="image/png" href="/favicon/favicon.png" />
+    <link rel="mask-icon" href="/favicon/favicon-safari.svg?v=3" color="#fd266f" />    
     <title>Intervid</title>
   </head>
 
