--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <!-- <meta property="og:url" content="http://intervid-app.herokuapp.com" /> -->
 
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon.png" />
+  <link rel="icon" type="image/x-icon" href="<%= BASE_URL %>favicon.ico">
+  <link rel="icon" type="image/png" href="/favicon/favicon.png" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <title>Intervid</title>
 </head>
