--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <meta property="og:url" content="https://www.inter-vid.com/" />
     <meta property="og:type" content="website" />
 
+    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.png"/>    
     <link rel="icon" type="image/x-icon" href="/favicon/favicon.ico" />
     <link rel="icon" type="image/png" href="/favicon/favicon.png" />
     <link rel="mask-icon" href="/favicon/favicon-safari.svg?v=3" color="#fd266f" />    
